# raw-image-processing

./: .pylintrc  CHANGES  Calibration.csv  INSTRUCTIONS.txt  MANGOBatchProcessing_InGeO_iowa.py  MANGOimage.py  MANGOimagehdf5.py  MANIFEST.in  ProcessImage.py  ProcessImageHDF5.py  README.md  SiteInformation.csv  batch_process.py  create_hdf5_files.py  example_config.ini  mock.hdf5  mock.py  movie.py  process_single_day.py  pyproject.toml  setup.cfg  writeHDF5.py
Sites/Bridger/calibration/: Calibration.csv  CalibrationInfo.csv  Latitudes.csv  Longitudes.csv  imageLatLong.csv
Sites/CRFS/: Calibration.csv
Sites/CRFS/calibration/: Calibration.csv  CalibrationInfo.csv  Latitudes.csv  Longitudes.csv  imageLatLong.csv
Sites/CRFS/schedule/: Schedule.csv
Sites/CRFS/system/: ccd.csv
Sites/Eastern Iowa Observatory/calibration/: Calibration.csv  CalibrationInfo.csv  Latitudes.csv  Longitudes.csv  imageLatLong.csv
Sites/Hat Creek Observatory/calibration/: Calibration.csv  CalibrationInfo.csv  Latitudes.csv  Longitudes.csv  imageLatLong.csv
Sites/Hat Creek Observatory/schedule/: Hat Creek Observatory Schedule.csv
Sites/Hat Creek Observatory/system/: ambient.csv  battery.csv  disk.csv
Sites/Madison/calibration/: Calibration.csv  CalibrationInfo.csv  Latitudes.csv  Longitudes.csv  imageLatLong.csv
Sites/Rainwater Observatory/calibration/: Calibration.csv  CalibrationInfo.csv  Latitudes.csv  Longitudes.csv  imageLatLong.csv
calibration/: calibrationfunctions.py  calibrationfunctions.py~  constants.py  coordmapver.py  database.py  decorators.py  forms.py  forms.py~  models.py  registration.py  views.py  views.py~
data/: example_config.ini
src/mangonetwork/: Calibrate.py  Keograms.py  MANGOImage.py  MANGOimage.py  MANGOimagehdf5.py  ProcessRawImages.py  QuicklookMovies.py
src/mangonetwork/raw/: BITtoHDF5.py  Calibrate.py  MANGOImage.py  MANGOimagehdf5.py  ProcessImageHDF5.py  ProcessRawImages.py  QuicklookMovies.py  StarCal.py  calibrate.py  convert_old_data.py  imageops.py  keograms.py  mango_image.py  mango_image_tav.py  process_raw_images.py  quicklook_movies.py  quicklook_movies_tav.py  starcal.py  starcal_tav.py
src/mangonetwork/raw/data/: BITtoHDF5config.ini  SiteInformation.csv  bdr-greenline.ini  blo-greenline.ini  cfs-greenline.ini  cfs-redline.ini  cvo-greenline.ini  cvo-redline.ini  eio-greenline.ini  eio-redline.ini  low-greenline.ini  mdk-redline.ini  mro-greenline.ini  mto-redline.ini  new-greenline.ini  par-redline.ini  starcal-BLO-greenline.txt  starcal-BLOgreen.txt  starcal-bdr-greenline.txt  starcal-cfs-greenline.txt  starcal-cfs-redline.txt  starcal-cvo-greenline.txt  starcal-cvo-redline.txt  starcal-eio-redline.txt  starcal-low-greenline.txt  starcal-mdk-redline.txt  starcal-mro-greenline.txt  starcal-mto-redline.txt  starcal-new-greenline.txt  starcal-par-redline.txt
tbd/: ProcessImage.py  batch_process.py  create_hdf5_files.py
