[metadata]
name = mangonetwork-raw
version = attr: mangonetwork.__version__
author = Asti Bhatt
author_email = asti.bhatt@sri.com
description = MANGO network raw image processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mangonetwork/raw-image-processing
project_urls =
    Bug Tracker = https://github.com/mangonetwork/raw-image-processing/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find_namespace:

python_requires = >= 3.6

install_requires =
    numpy
    scipy
    scikit-image
    h5py
    pandas
    matplotlib
    hcipy

scripts =
    bin/mango-create-keogram

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mango-process-raw-images = mangonetwork.ProcessRawImages:main
    mango-calibrate = mangonetwork.Calibrate:main
    mango-keograms = mangonetwork.Keograms:main
    mango-quicklook-movies = mangonetwork.QuicklookMovies:main

; [options.data_files]
; share/mangonetwork =
;     data/Calibration.csv
;     data/SiteInformation.csv
;     data/example_config.ini
