[metadata]

name = mangonetwork-raw
version = attr: mangonetwork.raw.__version__
license = GPLv3 

author = Asti Bhatt
author_email = asti.bhatt@sri.com

description = MANGO network raw image processing
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/mangonetwork/raw-image-processing
project_urls =
    Bug Tracker = https://github.com/mangonetwork/raw-image-processing/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find_namespace:

python_requires = >= 3.6

install_requires =
    numpy
    scipy
    scikit-image
    h5py
    pandas
    matplotlib
    hcipy
    importlib_resources>1.3; python_version < "3.9"

scripts =
    bin/mango-create-keogram

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mango-process-raw-images = mangonetwork.raw.ProcessRawImages:main
    mango-calibrate = mangonetwork.raw.Calibrate:main
    mango-keograms = mangonetwork.raw.Keograms:main
    mango-quicklook-movies = mangonetwork.raw.QuicklookMovies:main
    mango-starcal = mangonetwork.raw.StarCal:main

[options.package_data]
* = data/*
